--- a/univention-pulse-0.1/debian/changelog
+++ b/univention-pulse-0.1/debian/changelog
@@ -1,3 +1,9 @@
+univention-pulse (0.6-1) unstable; urgency=medium
+
+  * Pulse 3.0.1 integration on UCS 4.0
+
+ -- Antoine Eiche <aeiche@mandriva.com>  Thu, 26 Mar 2015 14:14:49 +0100
+
 univention-pulse (0.5-1) unstable; urgency=low
 
   * Pulse 2.1 compatibility
